<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>se.kth.compilers</groupId>
    <artifactId>java-17-maven-project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>se.kth.compilers.Hello</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
	    <plugin>
    		<groupId>com.rudikershaw.gitbuildhook</groupId>
    		<artifactId>git-build-hook-maven-plugin</artifactId>
    		<version>3.1.0</version>
    		<configuration>
        		<installHooks>
            			<commit-msg>hooks/commit-msg</commit-msg>
            			<pre-commit>hooks/pre-commit</pre-commit>
        		</installHooks>
    		</configuration>
    		<executions>
        		<execution>
            			<goals>
                			<goal>install</goal>
            			</goals>
        		</execution>
    		</executions>
	    </plugin>
	    <plugin>
    		<groupId>com.diffplug.spotless</groupId>
    		<artifactId>spotless-maven-plugin</artifactId>
    		<version>2.25.0</version>
    		<configuration>
        		<formats>
            			<!-- prettier with java-plugin -->
            			<format>
                			<includes>
                    				<include>src/*/java/**/*.java</include>
                			</includes>

                			<prettier>
                    				<devDependencies>
                        				<prettier>2.0.5</prettier>
                        				<prettier-plugin-java>0.8.0</prettier-plugin-java>
                    				</devDependencies>
                    				<config>
                        				<tabWidth>4</tabWidth>
                        				<parser>java</parser>
                    				</config>
                			</prettier>
            			</format>
        		</formats>
    		</configuration>
    		<executions>
        		<execution>
            			<phase>verify</phase>
            			<goals>
                			<goal>check</goal>
            			</goals>
        		</execution>
    		</executions>
	    </plugin>
        </plugins>
    </build>

</project>
